# rebate-attack-force

./: .dockerignore  .gitignore  CRATE_BEFORE_ATTACK_RESEARCH.md  Cargo.toml  Dockerfile  README.md  TODO.md
.cargo/: config.toml
.github/workflows/: container.yml
crates/client/: Cargo.toml  Trunk.toml  index.html
crates/client/src/: hud.rs  input.rs  legs.rs  main.rs  net.rs  sfx.rs  typography.rs  view.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/examples/: netbench.rs
crates/server/src/: lib.rs  main.rs
crates/server/tests/: ws_bot.rs
crates/sim/: Cargo.toml
crates/sim/examples/: botdbg.rs  mapdbg.rs  walkdbg.rs
crates/sim/src/: game.rs  lib.rs  math.rs  rng.rs  terrain.rs
crates/sim/tests/: sim_tests.rs
scripts/: drive_hold.mjs  drive_keys.mjs  gen_croaks.py  smoke.mjs
