[workspace]
resolver = "2"
members = ["crates/sim", "crates/protocol", "crates/server", "crates/client"]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# Faster iterative builds for the heavy client.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = "thin"
