[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
sim = { path = "../sim" }
protocol = { path = "../protocol" }
bevy = "0.18.1"
bevy_embedded_assets = "0.15"
ewebsock = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams"] }
js-sys = "0.3"
