[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
sim = { path = "../sim" }
protocol = { path = "../protocol" }
serde = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
